--- a/README.org
+++ b/README.org
@@ -13,10 +13,12 @@ It is:
 - No special characters (URL safe)
 
 In general the structure of a ULID is as follows:
-   01AN4Z07BY      79KA1307SR9X4MV3
-  |----------|    |----------------|
-   Timestamp          Randomness
-     48bits             80bits
+
+| 01AN4Z07BY | 79KA1307SR9X4MV3 |
+|------------+------------------|
+| Timestamp  | Randomness       |
+| 48bits     | 80bits           |
+|------------+------------------|
 
 For more information have a look at the original
 [[https://github.com/alizain/ulid#specification][specification]].
